kustomize/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 3838
